--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fontsource/fredoka-one": "^5.1.0",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
