--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
+    "recharts": "^2.15.0",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
