--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@fontsource/fredoka-one": "^5.1.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
