--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
@@ -27,7 +28,8 @@
     "react-slick": "^0.30.3",
     "recharts": "^2.15.0",
     "redux-persist": "^6.0.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
