feat: Update ExamDetailsPage to display "Pulsuz" for free exams and enhance ExamViewPage with navigation and answer sheet features
fix: Improve user experience on LoginPage and RegisterPage with updated text and layout

chore: Set up server with Gumroad webhook integration and Firebase service account

--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@google/generative-ai": "^0.24.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.4.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "jspdf": "^2.5.2",
@@ -49,5 +54,10 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
