--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "recharts": "^2.15.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.21.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
